新增动态链接

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
     "element-ui": "^2.4.5",
+    "font-awesome": "^4.7.0",
     "nprogress": "^0.2.0",
     "three": "^0.131.3",
     "vue": "^2.6.11",
+    "vue-quick-menu": "^1.0.7",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vue-table-with-tree-grid": "^0.2.4",
